refactor: No need to double Guix env in HerbstluftWM

--- a/README.adoc
+++ b/README.adoc
@@ -5019,8 +5019,7 @@ TODO: Document on a menu-driven/guiding UX
 ----
 #!/usr/bin/env bash
 
-exec enrich-path wm herbstluft menus - \
-	deep-exec guix/with-env "$@"
+exec enrich-path wm herbstluft menus - "$@"
 
 ----
 
