--- a/README.adoc
+++ b/README.adoc
@@ -180,6 +180,10 @@ exec "$@"
 ----
 #!/usr/bin/env bash
 
+# All hell break loose without the following!!!
+# Why is the varible set to empty???
+unset GDK_PIXBUF_MODULE_FILE
+
 if [ -f ~/.env ]; then
 	. ~/.env
 fi
