fix: bash-user should use base-pure

--- a/README.adoc
+++ b/README.adoc
@@ -178,7 +178,7 @@ exec "$@"
 .file::bash-user
 [source,sh]
 ----
-#!/usr/bin/env bash
+#!/usr/bin/env bash-pure
 
 # All hell break loose without the following!!!
 # Why is the varible set to empty???
