feat: HerbstluftWM fullscreen = maximize

--- a/README.adoc
+++ b/README.adoc
@@ -5166,7 +5166,8 @@ switch -glob $action {
                 callHC attr clients.focus.floating toggle
             }
             fullscreen {
-                callHC fullscreen toggle
+                # callHC fullscreen toggle
+                execl $::env(HOME)/.guix-profile/share/doc/herbstluftwm/examples/maximize.sh
             }
         }
     }
