--- a/README.adoc
+++ b/README.adoc
@@ -3141,7 +3141,8 @@ exec emacsclient --socket-name="${emacs_socket_name_}" --no-wait --create-frame 
 
 report-missing-executables tdrop tdrop || exit 1
 
-exec tdrop -h 60% --auto-detect-wm --monitor-aware term-emu zsh-user
+# exec tdrop -h 60% --auto-detect-wm --monitor-aware term-emu zsh-user
+exec tdrop --monitor-aware term-emu zsh-user
 
 ----
 
@@ -3154,7 +3155,7 @@ exec tdrop -h 60% --auto-detect-wm --monitor-aware term-emu zsh-user
 
 report-missing-executables emacsclient-commander-for-dropdown emacsclient-commander-for-dropdown || exit 1
 
-exec tdrop -h 60% --auto-detect-wm --monitor-aware emacsclient-commander-for-dropdown
+exec tdrop --monitor-aware emacsclient-commander-for-dropdown
 
 ----
 
