--- a/README.adoc
+++ b/README.adoc
@@ -3114,6 +3114,21 @@ exec run-chrome --app=https://calendar.google.com "$@"
 
 === Desktop utilities
 
+==== `run-tdrop` - helper to run `tdrop` with default options
+
+.file::run-tdrop
+[source,sh]
+----
+#!/usr/bin/env sh
+
+report-missing-executables tdrop tdrop || exit 1
+
+
+# exec tdrop -h 60% --auto-detect-wm --monitor-aware term-emu zsh-user
+exec tdrop --remember --monitor-aware "$@"
+
+----
+
 ==== `emacsclient-commander-for-dropdown` - helper to display a commander window with Emacsclient
 
 This executable is supposed to be used with https://github.com/noctuid/tdrop[tdrop], which, in turn, uses the executable name to perform various hacks in order to set X window properties.  Hence, its name is prefixed with `emacsclient`.
@@ -3139,10 +3154,7 @@ exec emacsclient --socket-name="${emacs_socket_name_}" --no-wait --create-frame 
 ----
 #!/usr/bin/env dash
 
-report-missing-executables tdrop tdrop || exit 1
-
-# exec tdrop -h 60% --auto-detect-wm --monitor-aware term-emu zsh-user
-exec tdrop --monitor-aware term-emu zsh-user
+exec run-tdrop term-emu zsh-user "$@"
 
 ----
 
@@ -3155,7 +3167,7 @@ exec tdrop --monitor-aware term-emu zsh-user
 
 report-missing-executables emacsclient-commander-for-dropdown emacsclient-commander-for-dropdown || exit 1
 
-exec tdrop --monitor-aware emacsclient-commander-for-dropdown
+exec run-tdrop emacsclient-commander-for-dropdown "$@"
 
 ----
 
