feat: Add window class to pprint-client-list

--- a/README.adoc
+++ b/README.adoc
@@ -4934,8 +4934,8 @@ wmctrl -m | grep 'Name: ' | cut -d' ' -f2-
 
 report-missing-executables wmctrl wmctrl || exit 1
 
-exec wmctrl -l \
-	| awk '{ for (i = 4; i <= NF; i++) printf $i" "; print "::", $1 }'
+exec wmctrl -lx \
+	| awk '{ for (i = 5; i <= NF; i++) printf $i" "; print "::", $3, "::", $1 }'
 
 ----
 
